Update bundles/org.openhab.binding.somfytahoma/src/main/java/org/openhab/binding/somfytahoma/internal/handler/SomfyTahomaBridgeHandler.java
Co-authored-by: J-N-K <J-N-K@users.noreply.github.com>